# rabbitmq-chat

./: README.md  client.Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  server.Dockerfile
client/: cli.py  commands.py  main.py  worker.py
server/: commands.py  errors.py  main.py  storages.py  worker.py
