[tool.poetry]
name = "rabbitmq-chat"
version = "0.1.0"
description = ""
authors = ["vashcheulov <aviev2000@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"
kombu = "^5.2.3"
urwid = "^2.1.2"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

